@@ -3,8 +3,8 @@ package com.tagtraum.perf.gcviewer.imp;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.UnsupportedEncodingException;
-import java.text.SimpleDateFormat;
 import java.util.Date;
+import java.util.Deque;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.logging.Level;
@@ -20,20 +20,52 @@ import com.tagtraum.perf.gcviewer.model.GCEvent;
 import com.tagtraum.perf.gcviewer.model.GCModel;
 import com.tagtraum.perf.gcviewer.util.ParsePosition;
 
+/**
+ * <p>Parses log output from Sun / Oracle Java 1.4 / 1.5 / 1.6. / 1.7
+ * <br>Supports the following gc algorithms:
+ * <ul>
+ * <li>-XX:+UseSerialGC</li>
+ * <li>-XX:+UseParallelGC</li>
+ * <li>-XX:+UseParNewGC</li>
+ * <li>-XX:+UseParallelOldGC</li>
+ * <li>-XX:+UseConcMarkSweepGC</li>
+ * <li>-Xincgc (1.4 / 1.5)</li>
+ * </ul>
+ * </p>
+ * <p>-XX:+UseG1GC is not supported by this class, but by {@link DataReaderSun1_6_0G1}
+ * </p>
+ * <p>Supports the following options:
+ * <ul>
+ * <li>-XX:+PrintGCDetails</li>
+ * <li>-XX:+PrintGCTimeStamps</li>
+ * <li>-XX:+PrintGCDateStamps</li>
+ * <li>-XX:+CMSScavengeBeforeRemark</li>
+ * <li>-XX:+PrintHeapAtGC (output ignored)</li>
+ * <li>-XX:+PrintTenuringDistribution (output ignored)</li>
+ * <li>-XX:+PrintAdaptiveSizePolicy (output ignored)</li>
+ * <li>-XX:+PrintPromotionFailure (output ignored)</li>
+ * <li>-XX:+PrintGCApplicationStoppedTime (output ignored)</li>
+ * <li>-XX:+PrintGCApplicationConcurrentTime (output ignored)</li>
+ * <li>-XX:PrintCMSStatistics=2 (output ignored)</li>
+ * </ul>
+ * </p>
+ * @author <a href="mailto:hs@tagtraum.com">Hendrik Schreiber</a>
+ * @author <a href="mailto:gcviewer@gmx.ch">Joerg Wuethrich</a>
+ * <p>created on: 23.10.2011 (copied from 1.5 implementation)</p>
+ * @see DataReaderSun1_6_0G1
+ */
 public class DataReaderSun1_6_0 extends AbstractDataReaderSun {
 
-    private static final String DATE_STAMP_FORMAT = "yyyy-MM-dd'T'HH:mm:ss.S";
-    private static final int LENGTH_OF_DATESTAMP = 29;
-
     private static Logger LOG = Logger.getLogger(DataReaderSun1_6_0.class.getName());
-    private static SimpleDateFormat dateParser = new SimpleDateFormat(DATE_STAMP_FORMAT);
-
+    
     private static final String UNLOADING_CLASS = "[Unloading class ";
-    private static final String DESIRED_SURVIVOR = "Desired survivor";
-    private static final String APPLICATION_TIME = "Application time:";
-    private static final String TOTAL_TIME_THREADS_STOPPED = "Total time for which application threads were stopped:";
-    private static final String SURVIVOR_AGE = "- age";
+    private static final String APPLICATION_TIME = "Application time:"; // -XX:+PrintGCApplicationConcurrentTime
+    private static final String TOTAL_TIME_THREADS_STOPPED = "Total time for which application threads were stopped:"; // -XX:+PrintGCApplicationStoppedTime
+    private static final String DESIRED_SURVIVOR = "Desired survivor"; // -XX:+PrintTenuringDistribution
+    private static final String SURVIVOR_AGE = "- age"; // -XX:+PrintTenuringDistribution
     private static final String TIMES_ALONE = " [Times";
+    private static final String FINISHED = "Finished"; // -XX:PrintCmsStatistics=2
+    private static final String CARDTABLE = " (cardTable: "; // -XX:PrintCmsStatistics=2 
     private static final List<String> EXCLUDE_STRINGS = new LinkedList<String>();
 
     static {
@@ -43,7 +75,13 @@ public class DataReaderSun1_6_0 extends AbstractDataReaderSun {
         EXCLUDE_STRINGS.add(TOTAL_TIME_THREADS_STOPPED);
         EXCLUDE_STRINGS.add(SURVIVOR_AGE);
         EXCLUDE_STRINGS.add(TIMES_ALONE);
+        EXCLUDE_STRINGS.add(FINISHED);
+        EXCLUDE_STRINGS.add(CARDTABLE);
     }
+    
+    private static final String EVENT_YG_OCCUPANCY = "YG occupancy";
+    private static final String EVENT_PARNEW = "ParNew";
+    private static final String EVENT_DEFNEW = "DefNew";
     
     private static final String CMS_ABORT_PRECLEAN = " CMS: abort preclean due to time ";
 
@@ -54,17 +92,20 @@ public class DataReaderSun1_6_0 extends AbstractDataReaderSun {
         HEAP_STRINGS.add("def new generation"); // serial young collection -XX:+UseSerialGC
         HEAP_STRINGS.add("PSYoungGen"); // parallel young collection -XX:+UseParallelGC
         HEAP_STRINGS.add("par new generation"); // parallel young (CMS / -XX:+UseParNewGC)
-        HEAP_STRINGS.add("eden space");
-        HEAP_STRINGS.add("from space");
-        HEAP_STRINGS.add("to   space");
+        HEAP_STRINGS.add("adaptive size par new generation"); // parallel young (CMS / -XX:+UseParNewGC / -XX:+PrintAdaptiveSizePolicy)
+        HEAP_STRINGS.add("eden");
+        HEAP_STRINGS.add("from");
+        HEAP_STRINGS.add("to");
         
         HEAP_STRINGS.add("ParOldGen"); // parallel old collection -XX:+UseParallelOldGC
         HEAP_STRINGS.add("PSOldGen"); // serial old collection -XX:+UseParallelGC without -XX:+UseParallelOldGC
-        HEAP_STRINGS.add("object space");
+        HEAP_STRINGS.add("object");
         HEAP_STRINGS.add("PSPermGen"); // serial (?) perm collection
-        HEAP_STRINGS.add("tenured generation"); // serial old collection -XX:UseSerialGC
+        HEAP_STRINGS.add("tenured generation"); // serial old collection -XX:+UseSerialGC
         HEAP_STRINGS.add("the space");
-        HEAP_STRINGS.add("compacting perm gen"); // serial perm collection -XX:UseSerialGC
+        HEAP_STRINGS.add("ro space");
+        HEAP_STRINGS.add("rw space");
+        HEAP_STRINGS.add("compacting perm gen"); // serial perm collection -XX:+UseSerialGC
         HEAP_STRINGS.add("concurrent mark-sweep generation total"); // CMS old collection
         HEAP_STRINGS.add("concurrent-mark-sweep perm gen"); // CMS perm collection
         
@@ -80,43 +121,63 @@ public class DataReaderSun1_6_0 extends AbstractDataReaderSun {
         ADAPTIVE_SIZE_POLICY_STRINGS.add("avg_survived_padded_avg");
     }
 
-    private static Pattern unloadingClassPattern = Pattern.compile(".*\\[Unloading class [^\\]]+\\]$");
-
     // 1_6_0_u24 mixes lines, when outputing a "promotion failed" which leads to a "concurrent mode failure"
     // pattern looks always like "...[CMS<datestamp>..." or "...[CMS<timestamp>..."
     // the next line starts with " (concurrent mode failure)" which in earlier releases followed "CMS" immediately
     // the same can happen with "...ParNew<timestamp|datestamp>..."
-    private static Pattern linesMixedPattern = Pattern.compile("(.* \\[(CMS|ParNew))([0-9]+[-.].*)");
+    private static Pattern linesMixedPattern = Pattern.compile("(.*\\[(CMS|ParNew|DefNew|ASCMS|ASParNew))([0-9]+[-.].*)");
     // Matcher group of start of line
     private static final int LINES_MIXED_STARTOFLINE_GROUP = 1;
     // Matcher group of end of line
     private static final int LINES_MIXED_ENDOFLINE_GROUP = 3;
     
-    // -XX:+PrintAdaptiveSizePolicy outputs the following lines:
+    // -XX:+PrintAdaptiveSizePolicy combined with -XX:+UseAdaptiveSizePolicy outputs the following lines:
     // 0.175: [GCAdaptiveSizePolicy::compute_survivor_space_size_and_thresh:  survived: 2721008  promoted: 13580768  overflow: trueAdaptiveSizeStart: 0.186 collection: 1 
     // PSAdaptiveSizePolicy::compute_generation_free_space: costs minor_time: 0.059538 major_cost: 0.000000 mutator_cost: 0.940462 throughput_goal: 0.990000 live_space: 273821824 free_space: 33685504 old_promo_size: 16842752 old_eden_size: 16842752 desired_promo_size: 16842752 desired_eden_size: 33685504
     // AdaptiveSizePolicy::survivor space sizes: collection: 1 (2752512, 2752512) -> (2752512, 2752512) 
     // AdaptiveSizeStop: collection: 1 
     //  [PSYoungGen: 16420K->2657K(19136K)] 16420K->15919K(62848K), 0.0109211 secs] [Times: user=0.00 sys=0.00, real=0.01 secs]
     // -> to parse it, the first line must be split, and the following left out until the rest of the gc information follows
-    private static Pattern adaptiveSizePolicyPattern = Pattern.compile("(.*GC)Adaptive.*");
-    private static final String ADAPTIVE_PATTERN = "GCAdaptive";
+    private static Pattern adaptiveSizePolicyPattern = Pattern.compile("(.*GC|.*\\(System\\))Adaptive.*");
+    private static final String ADAPTIVE_PATTERN = "AdaptiveSize";
+    
+    // -XX:+PrintAdaptiveSizePolicy combined with -XX:-UseAdaptiveSizePolicy (not using the policy, just printing)
+    // outputs the following line:
+    // 0.222: [GCAdaptiveSizePolicy::compute_survivor_space_size_and_thresh:  survived: 2720992  promoted: 13613552  overflow: true [PSYoungGen: 16420K->2657K(19136K)] 16420K->15951K(62848K), 0.0132830 secs] [Times: user=0.00 sys=0.03, real=0.02 secs] 
+    private static Pattern printAdaptiveSizePolicyPattern = Pattern.compile("(.*GC)Adaptive.*(true|false)( \\[.*)");
+    private static final int PRINT_ADAPTIVE_SIZE_GROUP_BEFORE = 1;
+    private static final int PRINT_ADAPTIVE_SIZE_GROUP_AFTER = 3;
+    
+    // -XX:PrintCmsStatistics=2
+    private static final String PRINT_CMS_STATISTICS_ITERATIONS = "iterations";
+    private static Pattern printCmsStatisticsIterationsPattern = Pattern.compile("(.*)[ ][\\[][0-9]+[ ]iterations[, 0-9]+[ ]waits[, 0-9]+[ ]cards[)][\\]][ ](.*)");
+    private static final int PRINT_CMS_STATISTICS_ITERATIONS_GROUP_BEFORE = 1;
+    private static final int PRINT_CMS_STATISTICS_ITERATIONS_GROUP_AFTER = 2;
+    private static final String PRINT_CMS_STATISTICS_SURVIVOR = "  (Survivor:";
+    
+    private Date firstDateStamp = null;
 
-    public DataReaderSun1_6_0(InputStream in) throws UnsupportedEncodingException {
-        super(in);
+    public DataReaderSun1_6_0(InputStream in, GcLogType gcLogType) throws UnsupportedEncodingException {
+        super(in, gcLogType);
     }
 
     public GCModel read() throws IOException {
-        if (LOG.isLoggable(Level.INFO)) LOG.info("Reading Sun 1.6.x format...");
+        if (LOG.isLoggable(Level.INFO)) LOG.info("Reading Sun / Oracle 1.4.x / 1.5.x / 1.6.x / 1.7.x format...");
         
         try {
             final GCModel model = new GCModel(false);
             model.setFormat(GCModel.Format.SUN_X_LOG_GC);
             Matcher mixedLineMatcher = linesMixedPattern.matcher("");
             Matcher adaptiveSizePolicyMatcher = adaptiveSizePolicyPattern.matcher("");
+            Matcher printAdaptiveSizePolicyMatcher = printAdaptiveSizePolicyPattern.matcher("");
+            Matcher printCmsStatisticsIterationsMatcher = printCmsStatisticsIterationsPattern.matcher("");
             String line;
-            String beginningOfLine = null;
+            // beginningOfLine must be a stack because more than one beginningOfLine might be needed
+            Deque<String> beginningOfLine = new LinkedList<String>();
             int lineNumber = 0;
+            boolean lastLineWasScavengeBeforeRemark = false;
+            boolean lineSkippedForScavengeBeforeRemark = false;
+            boolean printTenuringDistributionOn = false;
             final ParsePosition parsePosition = new ParsePosition(0);
             OUTERLOOP:
             while ((line = in.readLine()) != null) {
@@ -126,6 +187,7 @@ public class DataReaderSun1_6_0 extends AbstractDataReaderSun {
                     continue;
                 }
                 try {
+                    printTenuringDistributionOn = false;
                     // filter out [Unloading class com.xyz] statements
                     for (String i : EXCLUDE_STRINGS) {
                         if (line.indexOf(i) == 0) continue OUTERLOOP;
@@ -138,55 +200,141 @@ public class DataReaderSun1_6_0 extends AbstractDataReaderSun {
                         sb.replace(indexOfStart, indexOfStart + CMS_ABORT_PRECLEAN.length(), "");
                         line = sb.toString();
                     }
-                    mixedLineMatcher.reset(line);
-                    final int unloadingClassIndex = line.indexOf(UNLOADING_CLASS);
-                    if (unloadingClassPattern.matcher(line).matches()) {
-                        beginningOfLine = line.substring(0, unloadingClassIndex);
+                    if (line.indexOf(PRINT_CMS_STATISTICS_ITERATIONS) > 0) {
+                        // -XX:PrintCmsStatistics -> filter text that the parser doesn't know
+                        printCmsStatisticsIterationsMatcher.reset(line);
+                        if (!printCmsStatisticsIterationsMatcher.matches()) {
+                            LOG.severe("printCmsStatisticsIterationsMatcher did not match for line " + lineNumber + ": '" + line + "'");
+                            continue;
+                        }
+                        
+                        line = printCmsStatisticsIterationsMatcher.group(PRINT_CMS_STATISTICS_ITERATIONS_GROUP_BEFORE)
+                                + printCmsStatisticsIterationsMatcher.group(PRINT_CMS_STATISTICS_ITERATIONS_GROUP_AFTER);
+                    }
+                    if (line.indexOf(PRINT_CMS_STATISTICS_SURVIVOR) > 0) {
+                        String currentBeginning = "";
+                        if (beginningOfLine.size() > 0) {
+                            // if -XX:PrintCmsStatistics=2 is combined with -XX:+CMSScavengeBeforeRemark
+                            // then a remark line is broken into three parts, which have to be glued together
+                            currentBeginning = beginningOfLine.removeFirst();
+                        }
+                        beginningOfLine.addFirst(currentBeginning + line.substring(0, line.indexOf(PRINT_CMS_STATISTICS_SURVIVOR)));
                         continue;
                     }
-                    else if (line.endsWith("[DefNew") || line.endsWith("[ParNew") || line.endsWith("[ParNew (promotion failed)")) {
-                        // this is the case, when e.g. -XX:+PrintTenuringDistribution is used
-                        // here we want to skip "Desired survivor..." and "- age..." lines
-                        beginningOfLine = line;
-                        continue;
-                    }
-                    else if (mixedLineMatcher.matches()) {
-                        if (beginningOfLine != null) {
-                            // if PrintTenuringDistribution is used and a line is mixed, 
-                            // beginningOfLine may already contain a value, which must be preserved
-                            beginningOfLine += mixedLineMatcher.group(LINES_MIXED_STARTOFLINE_GROUP);
+
+                    if (isCmsScavengeBeforeRemark(line)) {
+                        // This is the case, when option -XX:+CMSScavengeBeforeRemark is used.
+                        // we have two events in the first line -> split it
+                        // if this option is combined with -XX:+PrintTenuringDistribution, the
+                        // first event is also distributed over more than one line
+                        int startOf2ndEvent = line.indexOf("]", line.indexOf(EVENT_YG_OCCUPANCY)) + 1;
+                        beginningOfLine.addFirst(line.substring(0, startOf2ndEvent));
+                        if (!isPrintTenuringDistribution(line)) {
+                            model.add(parseLine(line.substring(startOf2ndEvent), parsePosition));
+                            parsePosition.setIndex(0);
                         }
                         else {
-                            beginningOfLine = mixedLineMatcher.group(LINES_MIXED_STARTOFLINE_GROUP);
+                            beginningOfLine.addFirst(line.substring(startOf2ndEvent));
                         }
+                        
+                        lastLineWasScavengeBeforeRemark = true;
+                        continue;
+                    }
+                    final int unloadingClassIndex = line.indexOf(UNLOADING_CLASS);
+                    if (unloadingClassIndex > 0) {
+                        beginningOfLine.addFirst(line.substring(0, unloadingClassIndex));
+                        continue;
+                    }
+                    else if (isPrintTenuringDistribution(line)) {
+                        // this is the case, when e.g. -XX:+PrintTenuringDistribution is used
+                        // where we want to skip "Desired survivor..." and "- age..." lines
+                        beginningOfLine.addFirst(line);
+                        continue;
+                    }
+                    else if (isMixedLine(line, mixedLineMatcher)) {
+                        // if PrintTenuringDistribution is used and a line is mixed, 
+                        // beginningOfLine may already contain a value, which must be preserved
+                        String firstPartOfBeginningOfLine = beginningOfLine.pollFirst();
+                        if (firstPartOfBeginningOfLine == null) {
+                            firstPartOfBeginningOfLine = "";
+                        }
+                        beginningOfLine.addFirst(firstPartOfBeginningOfLine + mixedLineMatcher.group(LINES_MIXED_STARTOFLINE_GROUP));
+                        
                         model.add(parseLine(mixedLineMatcher.group(LINES_MIXED_ENDOFLINE_GROUP), parsePosition));
                         parsePosition.setIndex(0);
                         continue;
                     }
                     else if (line.indexOf(ADAPTIVE_PATTERN) >= 0) {
-                        adaptiveSizePolicyMatcher.reset(line);
-                        if (!adaptiveSizePolicyMatcher.matches()) {
-                            LOG.severe("adaptiveSizePolicyMatcher did not match for line " + lineNumber + ": '" + line + "'");
-                            continue;
+                        if (line.indexOf("Times") > 0) {
+                            // -XX:+PrintAdaptiveSizePolicy -XX:-UseAdaptiveSizePolicy
+                            printAdaptiveSizePolicyMatcher.reset(line);
+                            if (!printAdaptiveSizePolicyMatcher.matches()) {
+                                LOG.severe("printAdaptiveSizePolicyMatcher did not match for line " + lineNumber + ": '" + line + "'");
+                                continue;
+                            }
+                            
+                            model.add(parseLine(
+                                    printAdaptiveSizePolicyMatcher.group(PRINT_ADAPTIVE_SIZE_GROUP_BEFORE)
+                                        + printAdaptiveSizePolicyMatcher.group(PRINT_ADAPTIVE_SIZE_GROUP_AFTER), 
+                                    parsePosition));
+                            parsePosition.setIndex(0);
                         }
-                        beginningOfLine = adaptiveSizePolicyMatcher.group(1);
-                        lineNumber = skipLines(in, parsePosition, lineNumber, ADAPTIVE_SIZE_POLICY_STRINGS);
+                        else {
+                            // -XX:+PrintAdaptiveSizePolicy -XX:+UseAdaptiveSizePolicy
+                            adaptiveSizePolicyMatcher.reset(line);
+                            if (!adaptiveSizePolicyMatcher.matches()) {
+                                LOG.severe("adaptiveSizePolicyMatcher did not match for line " + lineNumber + ": '" + line + "'");
+                                continue;
+                            }
+                            beginningOfLine.addFirst(adaptiveSizePolicyMatcher.group(1));
+                            lineNumber = skipLines(in, parsePosition, lineNumber, ADAPTIVE_SIZE_POLICY_STRINGS);
+                        }
                         continue;
                     }
-                    else if (beginningOfLine != null) {
-                        line = beginningOfLine + line;
-                        beginningOfLine = null;
+                    else if (beginningOfLine.size() > 0) {
+                        // -XX:+CMSScavengeBeforeRemark combined with -XX:+PrintTenuringDistribution
+                        // is the only case where beginningOfLine.size() > 1
+                        printTenuringDistributionOn = beginningOfLine.size() == 2;
+                        if (gcLogType == GcLogType.SUN1_5 
+                                && lastLineWasScavengeBeforeRemark
+                                && ! lineSkippedForScavengeBeforeRemark) {
+                            
+                            // -XX:+CMSScavengeBeforeRemark inserts a pause on its own line between
+                            // the first and the second part of the enclosing remark event. Probably
+                            // that is the duration of the Scavenge-Before-Remark event; this information
+                            // will be dropped to reduce complexity of the parser at the cost of
+                            // some accuracy in that case.
+                            lineSkippedForScavengeBeforeRemark = true;
+                            continue;
+                        }
+                        else {
+                            line = beginningOfLine.removeFirst() + line;
+                        }
                     }
                     else if (line.indexOf(HEAP_SIZING_START) >= 0) {
                         // the next few lines will be the sizing of the heap
                         lineNumber = skipLines(in, parsePosition, lineNumber, HEAP_STRINGS);
                         continue;
                     }
-                    model.add(parseLine(line, parsePosition));
-                } catch (ParseException pe) {
+
+                    AbstractGCEvent<?> gcEvent = parseLine(line, parsePosition);
+                     
+                     if (lastLineWasScavengeBeforeRemark && !printTenuringDistributionOn) {
+                         // according to http://mail.openjdk.java.net/pipermail/hotspot-gc-use/2012-August/001297.html
+                         // the pause time reported for cms-remark includes the scavenge-before-remark time
+                         // so it has to be corrected to show only the time spent in remark event
+                         lastLineWasScavengeBeforeRemark = false;
+                         lineSkippedForScavengeBeforeRemark = false;
+                         GCEvent scavengeBeforeRemarkEvent = (GCEvent) model.get(model.size() - 1);
+                         GCEvent remarkEvent = (GCEvent) gcEvent;
+                         remarkEvent.setPause(remarkEvent.getPause() - scavengeBeforeRemarkEvent.getPause());
+                     }
+                     
+                     model.add(gcEvent);
+                } catch (Exception pe) {
                     if (LOG.isLoggable(Level.WARNING)) LOG.warning(pe.toString());
                     if (LOG.isLoggable(Level.FINE)) LOG.log(Level.FINE, pe.getMessage(), pe);
-                    beginningOfLine = null;
+                    beginningOfLine.clear();
                 }
                 // reset ParsePosition
                 parsePosition.setIndex(0);
@@ -202,8 +350,25 @@ public class DataReaderSun1_6_0 extends AbstractDataReaderSun {
         }
     }
 
-    protected AbstractGCEvent parseLine(final String line, final ParsePosition pos) throws ParseException {
-        AbstractGCEvent ae = null;
+    private boolean isMixedLine(String line, Matcher mixedLineMatcher) {
+        mixedLineMatcher.reset(line);
+        return mixedLineMatcher.matches();
+    }
+    
+    private boolean isPrintTenuringDistribution(String line) {
+        return line.endsWith("[DefNew") // serial young (CMS, Serial GC)
+                || line.endsWith("[ParNew") // parallel young (CMS, parallel GC) 
+                || line.endsWith("[ParNew (promotion failed)") // CMS
+                || line.endsWith("[GC"); // PSYoungGen (parallel sweep)
+    }
+
+    private boolean isCmsScavengeBeforeRemark(String line) {
+        return line.indexOf(EVENT_YG_OCCUPANCY) >= 0 
+                && (line.indexOf(EVENT_PARNEW) >= 0 || line.indexOf(EVENT_DEFNEW) >= 0);
+    }
+
+    protected AbstractGCEvent<?> parseLine(final String line, final ParsePosition pos) throws ParseException {
+        AbstractGCEvent<?> ae = null;
         try {
             // parse datestamp          "yyyy-MM-dd'T'hh:mm:ssZ:"
             // parse timestamp          "double:"
@@ -211,74 +376,43 @@ public class DataReaderSun1_6_0 extends AbstractDataReaderSun {
             // either GC data or another collection type starting with timestamp
             // pre-used->post-used, total, time
             final Date datestamp = parseDatestamp(line, pos);
-            final double timestamp = parseTimestamp(line, pos);
+            if (firstDateStamp == null) {
+                firstDateStamp = datestamp;
+            }
+            
+            double timestamp = getTimeStamp(line, pos, datestamp);
             final GCEvent.Type type = parseType(line, pos);
             // special provision for CMS events
             if (type.getConcurrency() == Concurrency.CONCURRENT) {
-                if (type.getPattern() == GcPattern.GC) {
-                    final ConcurrentGCEvent event = new ConcurrentGCEvent();
-                    event.setDateStamp(datestamp);
-                    event.setTimestamp(timestamp);
-                    event.setType(type);
-                    ae = event;
-                    // nothing more to parse...
-                } else {
-                    final ConcurrentGCEvent event = new ConcurrentGCEvent();
-                    event.setDateStamp(datestamp);
-                    event.setTimestamp(timestamp);
-                    event.setType(type);
+                final ConcurrentGCEvent event = new ConcurrentGCEvent();
 
+                // simple concurrent events (ending with -start) just are of type GcPattern.GC
+                event.setDateStamp(datestamp);
+                event.setTimestamp(timestamp);
+                event.setType(type);
+                if (type.getPattern() == GcPattern.GC_PAUSE_DURATION) {
+                    // the -end events contain a pause and duration as well
                     int start = pos.getIndex();
                     int end = line.indexOf('/', pos.getIndex());
                     event.setPause(Double.parseDouble(line.substring(start, end)));
                     start = end + 1;
                     end = line.indexOf(' ', start);
                     event.setDuration(Double.parseDouble(line.substring(start, end)));
-                    // nothing more to parse
-                    ae = event;
                 }
+                ae = event;
+                // nothing more to parse...
             } else {
                 final GCEvent event = new GCEvent();
                 event.setDateStamp(datestamp);
                 event.setTimestamp(timestamp);
                 event.setType(type);
                 // now add detail gcevents, should they exist
-                int currentIndex = pos.getIndex();
-                boolean currentIndexHasChanged = true;
-                while (hasNextDetail(line, pos) && currentIndexHasChanged) {
-                    final GCEvent detailEvent = new GCEvent();
-                    try {
-                        if (nextCharIsBracket(line, pos)) {
-                            detailEvent.setTimestamp(timestamp);
-                        } else {
-                            detailEvent.setTimestamp(parseTimestamp(line, pos));
-                        }
-                        detailEvent.setType(parseType(line, pos));
-                        setMemoryAndPauses(detailEvent, line, pos);
-                        event.add(detailEvent);
-                    } catch (UnknownGcTypeException e) {
-                        skipUntilEndOfDetail(line, pos, e);
-                    } catch (NumberFormatException e) {
-                        skipUntilEndOfDetail(line, pos, e);
-                    }
-                    
-                    // in a line with complete garbage the parser must not get stuck; use emergency exit...
-                    currentIndexHasChanged = currentIndex != pos.getIndex();
-                    currentIndex = pos.getIndex();
-                }
+                parseDetailEventsIfExist(line, pos, event);
                 setMemoryAndPauses(event, line, pos);
                 if (event.getPause() == 0) {
-                    if (hasNextDetail(line, pos)) {
-                        final GCEvent detailEvent = new GCEvent();
-                        if (nextCharIsBracket(line, pos)) {
-                            detailEvent.setTimestamp(timestamp);
-                        } else {
-                            detailEvent.setTimestamp(parseTimestamp(line, pos));
-                        }
-                        detailEvent.setType(parseType(line, pos));
-                        setMemoryAndPauses(detailEvent, line, pos);
-                        event.add(detailEvent);
-                    }
+                    // this is usually the case for full collections
+                    // there the "perm" collection is inserted between memory and pause part of main event
+                    parseDetailEventsIfExist(line, pos, event);
                     parsePause(event, line, pos);
                 }
                 ae = event;
@@ -289,39 +423,107 @@ public class DataReaderSun1_6_0 extends AbstractDataReaderSun {
         }
     }
 
-    private void skipUntilEndOfDetail(final String line, final ParsePosition pos, Exception e) {
-        // moving position to the end of this detail event -> skip it
-        int indexOfNextBracket = line.indexOf("]", pos.getIndex())+1;
-        if (indexOfNextBracket > pos.getIndex()) { 
-            pos.setIndex(indexOfNextBracket);
-            while (line.charAt(pos.getIndex()) == ' ') {
-                pos.setIndex(pos.getIndex()+1);
+    /**
+     * Parses detail events if any exist at current <code>pos</code> in <code>line</code>.
+     * 
+     * @param line current line
+     * @param pos current parse position
+     * @param event enclosing event
+     * @throws ParseException some problem when parsing the detail event
+     */
+    private void parseDetailEventsIfExist(final String line, final ParsePosition pos, final GCEvent event)
+            throws ParseException {
+        
+        int currentIndex = pos.getIndex();
+        boolean currentIndexHasChanged = true;
+        while (hasNextDetail(line, pos) && currentIndexHasChanged) {
+            final GCEvent detailEvent = new GCEvent();
+            try {
+                if (nextCharIsBracket(line, pos)) {
+                    detailEvent.setTimestamp(event.getTimestamp());
+                } else {
+                    detailEvent.setTimestamp(parseTimestamp(line, pos));
+                }
+                detailEvent.setType(parseType(line, pos));
+                setMemoryAndPauses(detailEvent, line, pos);
+                event.add(detailEvent);
+            } catch (UnknownGcTypeException e) {
+                skipUntilEndOfDetail(line, pos, e);
+            } catch (NumberFormatException e) {
+                skipUntilEndOfDetail(line, pos, e);
             }
+            
+            // in a line with complete garbage the parser must not get stuck; just stop parsing.
+            currentIndexHasChanged = currentIndex != pos.getIndex();
+            currentIndex = pos.getIndex();
         }
+    }
+
+    /**
+     * If the next thing in <code>line</code> is a timestamp, it is parsed and returned.
+     * 
+     * @param line current line
+     * @param pos current parse positition
+     * @param datestamp datestamp that may have been parsed
+     * @return timestamp (either parsed or derived from datestamp)
+     * @throws ParseException it seemed to be a timestamp but still couldn't be parsed
+     */
+    private double getTimeStamp(final String line, final ParsePosition pos, final Date datestamp) 
+            throws ParseException {
+        
+        double timestamp = 0;
+        if (nextIsTimestamp(line, pos)) {
+            timestamp = parseTimestamp(line, pos);
+        }
+        else if (firstDateStamp != null) {
+            // if no timestamp was present, calculate difference between last and this date
+            timestamp = (datestamp.getTime() - firstDateStamp.getTime()) / (double)1000; 
+        }
+        return timestamp;
+    }
+
+    /**
+     * Skips until the end of the current detail event.
+     * 
+     * @param line current line
+     * @param pos current parse position
+     * @param e exception that made skipping necessary
+     */
+    private void skipUntilEndOfDetail(final String line, final ParsePosition pos, Exception e) {
+        skipUntilEndOfDetail(line, pos, 1);
+        
         if (LOG.isLoggable(Level.FINE)) LOG.fine("Skipping detail event because of " + e);
     }
-
-    public Date parseDatestamp(String line, ParsePosition pos) throws ParseException {
-        Date date = null;
-        if (nextIsDatestamp(line, pos)) {
-            try {
-                date = dateParser.parse(line.substring(pos.getIndex(), LENGTH_OF_DATESTAMP-1));
-                pos.setIndex(pos.getIndex() + LENGTH_OF_DATESTAMP);
-            }
-            catch (java.text.ParseException e) {
-                throw new ParseException(e.toString(), line);
-            }
+    
+    /**
+     * Skips until end of current detail event. If the detail event contains detail events
+     * itself, those are skipped as well.
+     * 
+     * @param line current line
+     * @param pos current parse position
+     * @param levelOfDetailEvent level of nesting within detail event
+     */
+    private void skipUntilEndOfDetail(final String line, final ParsePosition pos, int levelOfDetailEvent) {
+        // moving position to the end of this detail event -> skip it
+        // if it contains other detail events, skip those as well (recursion)
+        int indexOfNextOpeningBracket = line.indexOf("[", pos.getIndex());
+        int indexOfNextClosingBracket = line.indexOf("]", pos.getIndex());
+        if (indexOfNextOpeningBracket > 0 && indexOfNextOpeningBracket < indexOfNextClosingBracket) {
+            ++levelOfDetailEvent;
+            pos.setIndex(indexOfNextOpeningBracket + 1);
+        }
+        else if (indexOfNextClosingBracket > 0) {
+            --levelOfDetailEvent;
+            pos.setIndex(indexOfNextClosingBracket + 1);
+        }
+        else {
+            // unexpected: no opening and no closing bracket -> skip out
+            --levelOfDetailEvent;
         }
         
-        return date;
-    }
-    
-    private boolean nextIsDatestamp(String line, ParsePosition pos) {
-        if (line.length() < 10) {
-            return false;
+        if (levelOfDetailEvent > 0) {
+            skipUntilEndOfDetail(line, pos, levelOfDetailEvent);
         }
-
-        return line.indexOf("-", pos.getIndex()) == 4 && line.indexOf("-", pos.getIndex() + 5) == 7;
     }
     
 }
